--- a/_posts/2017-02-17-moi-celi.markdown
+++ b/_posts/2017-02-17-moi-celi.markdown
@@ -2,6 +2,7 @@
 layout: post
 title: Мои цели
 date: 2017-02-17 12:30:00 +0200
+description: Чтобы знать куда идти, нужно обозначить цель.
 categories: posts
 ---
 
