--- a/_posts/2017-02-17-moi-celi.markdown
+++ b/_posts/2017-02-17-moi-celi.markdown
@@ -33,7 +33,7 @@ categories: posts
 
 Также, я хочу поделиться планами по развитию блога:
 
-* Провести SEO оптимизацию блога
+* [~~Провести базовую SEO оптимизацию блога~~](http://artego.space/seo-optimizaciya-bloga-na-jekyll)
 * Создать уникальный дизайн
 * ...
 
